<resources>
    // main page strings
    <string name="app_name">Assignment 3</string>
    <string name="selfie"> My Selfie</string>
    <string name="my_name">Minh Nguyen</string>
    <string name="info">Student at UML</string>
    <string name="major">Computer Science Major</string>
    <string name="self_intro">Self Intro</string>
    <string name="facts"> Facts About Me</string>
    <string name="more_facts"> More Facts About Me</string>
    <string name="invest_port"> Investment Portfolio</string>

    // self intro string
    <string name="location"> I am now at Dracut, MA</string>
    <string name="from"> I am from Vietnam</string>
    <string name="job"> I would like to be a Full Stack Developer</string>
    <string name="family"> My family is from Vietnam</string>
    <string name="family_members"> There are four people in my family</string>

    // facts about me string
    <string name="birth_place"> I was born in Vietnam</string>
    <string name="current_location"> I currently live in Dracut, MA</string>
    <string name="dream_location"> I would like to live in Hawaii</string>
    <string name="partner_birth_place"> My significant other was born in Vietnam</string>
    <string name="time_met"> I met my partner three years ago</string>

    // more facts about me string
    <string name="free_time"> I used my free time to study algorithms</string>
    <string name="app"> I used Flutter to code personal projects</string>
    <string name="ide"> My favorite IDE for coding is VS Code</string>
    <string name="fave_algo"> My favorite algorithm is Bubble Sort</string>

    // investment portfolio string
    <string name="my_port"> My Portfolio</string>
    <string name="family_port"> Family Portfolio</string>
    <string name="partner_port"> Partner Portfolio</string>

    // investment portfolio string
    <string name="fb"> Facebook</string>
    <string name="amzn"> Amazon</string>
    <string name="aapl"> Apple</string>
    <string name="tsla"> Tesla</string>
    <string name="crm"> Salesforce</string>
    <string name="snap"> Snapchat</string>
    <string name="twtr"> Twitter</string>
    <string name="nflx"> Netflix</string>

    // resume
    <string name="my_resume"> My Resume</string>
</resources>