<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelfIntroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/selfintro_custom_bg">

        <TextView
            android:id="@+id/location_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/from_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_textview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/job_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/from_textview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/job"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/family_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/job_textview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/family"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/family_member_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/family_textview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/family_members"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </RelativeLayout>
</RelativeLayout>