<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FactsAboutMeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/facts_custom_bg">

        <TextView
            android:id="@+id/birth_place_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/birth_place"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/current_location_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/birth_place_textview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/current_location"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/dream_location_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_location_textview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/dream_location"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/family_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dream_location_textview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/partner_birth_place"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/time_met_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/family_textview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/geraldine"
            android:text="@string/time_met"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </RelativeLayout>
</RelativeLayout>