<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/investment_custom_bg"
    tools:context=".InvestPortActivity">

        <Button
            android:id="@+id/my_port_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="#734fdd"
            android:fontFamily="@font/shalma"
            android:text="@string/my_port"
            android:textColor="@color/black"
            android:textSize="45sp" />

        <Button
            android:id="@+id/family_port_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_port_button"
            android:layout_centerInParent="true"
            android:backgroundTint="#734fdd"
            android:fontFamily="@font/shalma"
            android:text="@string/family_port"
            android:textColor="@color/black"
            android:textSize="45sp" />

        <Button
            android:id="@+id/partner_port_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/family_port_button"
            android:layout_centerInParent="true"
            android:backgroundTint="#734fdd"
            android:fontFamily="@font/shalma"
            android:text="@string/partner_port"
            android:textColor="@color/black"
            android:textSize="45sp" />

</RelativeLayout>